--- a/config/samples/sample_license_usage.yaml
+++ b/config/samples/sample_license_usage.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   annotations:
-    enfabrica.net/license: license-sample/2
+    enfabrica.net/license: license-sample/1,license-sample2/1,license-sample3/1
   creationTimestamp: null
   labels:
     run: nginx
